--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -12,3 +12,19 @@ h1, h2, h3, p {
     margin-left: auto;
     margin-right: auto;
 }
+
+div.experiment-texts {
+    font-size: 15vw;
+    font-weight:bold;
+    color: white;
+}
+
+div.vertical-middle {
+    margin: 0 auto;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
