--- a/templates/template.html
+++ b/templates/template.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
         <title>{% block title %}{% endblock %}</title>
     </head>
-    <body style="{% block style %}{% endblock %}">
+    <body>
         {% block content %}
         {% endblock %}
     </body>
