--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -2,7 +2,7 @@
 {% block title %}{{ exp_title }}{% endblock title%}
 
 {% block content %}
-<div class="vertical-middle">
+<div class="middle">
     <div class="experiment-texts">
     </div>
     <span class="circle blue"></span><br>
