--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,12 @@
 {% block title %}{{ index }}{% endblock title%}
 
 {% block content %}
-<h1>{{ title }}</h1>
+<div class="vertical-middle">
+    <h1>{{ title }}</h1>
     <p>{{ description }}</p>
     <div class="middle">
         <a class="pure-button custom-restricted-width" href="{{ url_for('test') }}">{{ test_button }}</a>
         <a class="pure-button custom-restricted-width" href="{{ url_for('experiment') }}">{{ exp_button }}</a>
     </div>
+</div>
 {% endblock %}
