--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,8 @@
 {% block title %}{{ results }}{% endblock title%}
 
 {% block content %}
-<h1>{{ results }}</h1>
+<div class="vertical-middle">
+    <h1>{{ results }}</h1>
     <p>
         {% for line in show_results %}
             {{line}}<br>
@@ -11,4 +12,5 @@
     <div class="middle">
         <a class="pure-button custom-restricted-width" href="{{ url_for('index') }}">{{ back_button }}</a>
     </div>
+</div>
 {% endblock %}
