--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,6 +6,23 @@ p, .pure-button {
     font-size: 2em
 }
 
+div.small {
+    max-width: 900px;
+}
+
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	height: 0;
+}
+.video-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 h1, h2, h3, p {
     text-align: center;
 }
