--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -10,4 +10,5 @@
     <span class="circle red"></span>
 </div>
 <script src={{ url_for('static', filename="scripts/experiment.js") }}></script>
+<script src={{ url_for('static', filename="scripts/back.js") }}></script>
 {% endblock %}
