--- a/templates/help.html
+++ b/templates/help.html
@@ -23,7 +23,8 @@
         </div>
     </div>
     <div class="middle">
-        <a class="pure-button custom-restricted-width" href="{{ url_for('index') }}">{{ back_button }}</a>
+        <a class="pure-button custom-restricted-width more-bottom" href="{{ url_for('index') }}">{{ back_button }}</a>
     </div>
 </div>
+<script src={{ url_for('static', filename="scripts/back.js") }}></script>
 {% endblock %}
