--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="middle">
-    <div class="experiment-texts">
-    </div>
+    <div class="experiment-texts">SAMPLE</div>
+    <div class="block-over">點選任意圓圈開始測試</div>
     <span class="circle blue"></span><br>
     <span class="circle green"></span>
     <span class="circle red"></span>
