data collections, fix key prevention

--- a/templates/results.html
+++ b/templates/results.html
@@ -4,6 +4,7 @@
 {% block content %}
 <div class="vertical-middle">
     <h1>{{ results }}</h1>
+    <p>{{ end_of_experiment }}</p>
     <p>
         {% for line in show_results %}
             {{line}}<br>
