--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}{{ index }}{% endblock title%}
 
 {% block content %}
-<div class="vertical-middle">
+<div class="vertical-middle upper">
     <h1>{{ title }}</h1>
     <p>{{ description }}</p>
     <div class="middle">
