--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,7 @@
 {% block title %}{{ results }}{% endblock title%}
 
 {% block content %}
-<div class="vertical-middle">
+<div class="vertical-middle upper">
     <h1>{{ results }}</h1>
     <p>{{ end_of_experiment }}</p>
     <p>
