--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,12 +7,30 @@ p, .pure-button {
     font-size: 2em;
 }
 
+.exp-zone > .pure-g > div {
+    box-sizing: border-box;
+    border-style: solid;
+    border-width: 1em;
+    border-color: lightgray;
+    height: 15vw;
+    position: relative;
+}
+
+.exp-zone > .pure-g > div > * {
+    font-size: 5vw;
+    font-weight: bold;
+}
+
 .more-bottom {
     margin-bottom: 2em;
 }
 
 div.small {
     max-width: 900px;
+}
+
+div.exp-zone {
+    max-width: 80%;
 }
 
 .video-container {
@@ -38,40 +56,19 @@ h1, h2, h3, p {
     margin-right: auto;
 }
 
-div.experiment-display {
-    background: black;
-    color: black;
-    padding-top: 6vw;
-    padding-bottom: 6vw;
-    margin-bottom: 20px;
-    height: 20vw;
-    width: 100%;
-    text-align: center;
-    display: table;
-}
-
-div.experiment-texts {
-    font-size: 17vw;
-    font-weight: bold;
-    color: white;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    vertical-align: middle;
-}
-
-.center-align {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-}
-
 .block {
-    height: 16vw;
-    width: 34vw;
-    background-color: red;
-    display: inline-block;
-    vertical-align: middle;
+    width: 10vw;
+    height: 10vw;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+div.exp-text {
+    height: 4em;
 }
 
 div.middle {
@@ -88,54 +85,27 @@ div.vertical-middle {
     margin: 0 auto;
     text-align: center;
     position: absolute;
-    top: 30%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.circle {
-    height: 16vw;
-    width: 16vw;
-    border-radius: 50%;
-    display: inline-block;
+div.upper {
+    top: 30%;
 }
 
-.circle.red {
-    background-color: red;
-    transform: translateX(1vw);
-}
-
-.circle.red:hover {
-    background-color: #ff4d4d;
-}
-
-.circle.blue {
-    background-color: blue;
-}
-
-.circle.blue:hover {
-    background-color: #4d4dff;
-}
-
-.circle.green {
-    background-color: green;
-    transform: translateX(-1vw);
-}
-
-.circle.green:hover {
-    background-color: #298f29;
-}
-
-@media screen and (min-width: 1200px) {
-    .circle {
-        height: 192px;
-        width: 192px;
+@media screen and (min-width: 1900px) {
+    div.exp-zone {
+        max-width: 1520px;
     }
-}
-
-@media screen and (min-width: 1400px) {
-    div.experiment-display {
-        padding-top: 84px;
-        padding-bottom: 84px;
+    .block {
+        width: 190px;
+        height: 190px;
+    }
+    .pure-g > div {
+        height: 285px;
+    }
+    .pure-g > div > * {
+        font-size: 95px;
     }
 }
