add conflict text

--- a/templates/experiment.html
+++ b/templates/experiment.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="vertical-middle exp-zone">
-    <div class="exp-text" id="text-before-exp">
-        <p>{{ before_exp }}</p>
+    <div class="exp-text">
+        <p id="text-before-exp">{{ before_exp }}</p>
     </div>
     <div class="pure-g" id="exp-table"></div>
 
