--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="vertical-middle upper">
     <h1>{{ title }}</h1>
-    <p>{{ description }}</p>
+    <p style="font-size: 2em">{{ description }}</p>
     <div class="middle">
         <a class="pure-button custom-restricted-width" href="{{ url_for('help') }}">{{ help }}</a>
         <a class="pure-button custom-restricted-width" href="{{ url_for('test') }}">{{ test_button }}</a>
