--- a/templates/help.html
+++ b/templates/help.html
@@ -7,7 +7,7 @@
     <div class="pure-g">
         <div class="pure-u-1-1">
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/TInRX_sIFGQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/8BGN3LO6Elk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
